# PokemonRPEngine

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  PLAYER_API_V2.md  README.md  SECURITY.md  alembic.ini  app.db  app.db-shm  docker-compose.yml  pyproject.toml  test.db  wsl_install_utf16.txt  wsl_setver_utf16.txt  wsl_status_utf16.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: deps.py
app/battle/: __init__.py  fast_resolver.py
app/canon/: fact_checker.py  ingest.py  validate.py
app/core/: config.py  errors.py  logging.py  metrics.py  rate_limit.py  security.py  tracing.py
app/db/: models.py  session.py
app/kernels/: __init__.py  event_classifier.py  rules.py
app/memory/: budgeter.py  compression.py  policies.py  prompt_assembler.py  query_builder.py  retriever.py  schemas.py  writer.py
app/providers/: base.py  mock.py  xfyun_http.py  xfyun_ws.py
app/services/: action_option_service.py  admin_service.py  auth_service.py  chat_service.py  opening_story_service.py  session_service.py  session_world_service.py  story_enhancement_service.py  story_progress_service.py
app/utils/: sse.py  text.py  time.py
app/worldgen/: __init__.py  generator.py
deploy/k8s/: api-deployment.yaml  ingress.yaml
desktop/: main.js  package-lock.json  package.json
docs/: lore-kernel-integration.md  whitepaper-kernel-summary.md
scripts/: backend_entry.py  backfill_world_profile_v2.py  build_desktop_exe.ps1  build_one_click_exe.ps1  build_user_desktop_exe.ps1  check_mojibake.py  create_v3_slot_from_profile.py  dev_seed.py  ingest_canon.py  load_test.py  mark_legacy_slots_readonly.py  one_click_launch.py  promote_role.py  run_desktop.ps1  run_local.ps1  validate_canon.py
templates/characters/: prof_oak.yaml
templates/prompts/: default_system.txt
templates/worlds/: kanto.yaml
tests/: conftest.py
tests/integration/: __init__.py  test_chat_flow.py  test_game_v2_flow.py  test_kernel_v2_api.py  test_v2_turn_pipeline_stream.py
tests/unit/: test_chat_action_options.py  test_compression.py  test_fast_resolver.py  test_kernel_classifier.py  (+6 more)
web/: .env.local.example  package-lock.json  package.json  tailwind.config.ts
(+63 files in other folders)
