[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pokemon-rp-engine"
version = "0.1.0"
description = "Enterprise-grade Pokemon RP platform with long-term memory"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.35",
  "alembic>=1.13.2",
  "psycopg[binary]>=3.2.1",
  "redis>=5.0.8",
  "httpx>=0.27.2",
  "websockets>=13.0",
  "bcrypt>=4.2.0",
  "PyJWT>=2.9.0",
  "structlog>=24.4.0",
  "prometheus-client>=0.20.0",
  "python-multipart>=0.0.9",
  "email-validator>=2.2.0",
  "pgvector>=0.3.4"
]

[project.optional-dependencies]
local-embed = ["sentence-transformers>=3.0.1"]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "anyio>=4.4.0",
  "ruff>=0.6.2",
  "black>=24.8.0",
  "mypy>=1.11.2",
  "types-redis>=4.6.0.20241004",
  "types-PyYAML>=6.0.12.20240917"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "ASYNC"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = false
warn_redundant_casts = false
warn_return_any = false
warn_unused_configs = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_any_generics = false
no_implicit_optional = false
allow_redefinition = true
disable_error_code = ["assignment", "arg-type", "return-value", "misc", "index", "type-arg", "no-untyped-def", "no-any-return", "unused-ignore", "no-redef"]

[[tool.mypy.overrides]]
module = ["sentence_transformers.*", "pgvector.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
